Fixing temp files

--- a/dac/demos/01kubernetes/presentation.org
+++ b/dac/demos/01kubernetes/presentation.org
@@ -51,5 +51,17 @@ x-x-x-x-x-x-x-x
 1. Launch cluster: while cluster launches show local docker run of jenkins and describe the shortcomings: doesn't restart and also when I do restart it, has lost any changes
 - launch root.env + setupaws.sh and walk through resources provisioned ( users, groups, keys and permissions )
 - launch kops.env + setupkos.sh this will take five minutes so talk about docker real quick, talk about cluster v/s bunch of servers real quick. Also take this time to launch a single jenkins container/pod
+
+
+2. launch jenkins rs + loadbalancer service
+at this point, show that killing a pod restarts , then setup container and again kill, to show that well, container does launch but changes are lost!
+
+
+
+FINAL: Manually terminate various instances and show service as up and running
+CLEANUP: destroy cluster, RDS instance
 x-x-x-x-x-x
 slide: let's solve 1st problem: we want container to be resilient (should restart)
+
+problem 2: need container without having to run setup wizard
+problem 3: persist our data changes: use EBS volume
